Style: Suppression des marges blanches en version mobile en enlevant des margin du body et en fixant la width du body à 100%

--- a/css/style.css
+++ b/css/style.css
@@ -745,6 +745,7 @@ footer{
 
     body{
         margin:0;
+        width:100%;
     }
 
    /* ... */
